# gozhtet

./: .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/patch_window/: macos.rs  mod.rs
src/lib/: Boot.svelte
src/lib/components/: Accordion.svelte  Button.svelte  Checkbox.svelte  Icon.svelte  Input.svelte  PluginCard.svelte  Resizable.svelte  Select.svelte  TabItem.svelte  ThemeCard.svelte  Title.svelte
src/lib/helpers/: logger.ts
src/lib/i18n/: en.json  ru.json
src/lib/models/: document.ts
src/lib/modules/editor/: index.ts
src/lib/modules/editor/view/: View.svelte
src/lib/modules/helpers/: index.ts  platform.ts  store.ts
src/lib/modules/plugin-manager/: index.ts
src/lib/modules/plugin-manager/core/: database.ts  index.ts
src/lib/modules/settings/view/: View.svelte
src/lib/modules/settings/view/pages/: Advanced.svelte  General.svelte  Plugins.svelte  Themes.svelte
src/lib/modules/sidebar/view/: PluginBar.svelte  View.svelte
src/lib/modules/theme/: index.ts  service.ts
src/lib/pages/: App.svelte  Welcome.svelte
src/lib/store/: app.ts  editor.ts  platform.ts  plugins.ts  theme.ts
src/lib/themes/: base.json
